# agentic-rag-legal-challenge

./: .env.example  .gitignore  API.md  EVALUATION.md  README.md  offline_eval_results.json  openapi.yaml  pyproject.toml  questions.json  requirements.txt  submission.json  submission_v13.json  update_pipeline.py
arlc/: __init__.py  client.py  config.py  submission.py  telemetry.py
docs/: legal_hybrid_rag_design.md  legal_hybrid_rag_runbook.md
examples/: README.md  eval_offline.py  generate_submission_json_local.py  legal_hybrid_rag.py  legal_hybrid_rag_e2e_check.py  legal_hybrid_rag_ragas_eval.py  legal_hybrid_rag_retrieval_gap_analysis.py  legal_hybrid_rag_smoke.py  reproduce_akshay_feedback.py  requirements_legal_hybrid_rag.txt  retrieval_gap_baseline.json  submit.py  telemetry_example.py  validate_telemetry_and_format.py
examples/langchain/: naive_rag_langchain.py  requirements_langchain.txt
examples/llamaindex/: naive_rag_llamaindex.py  requirements_llamaindex.txt
ingestion/: ingest.py  legal_metadata.py  utils.py
notebooks/: run.ipynb  test_runner.ipynb
private_dataset/: questions.json
retrieval/: __init__.py  free_text_prompts.py  hybrid_rag_pipeline.py  legal_hybrid_rag_pipeline.py  legal_question_router.py  turbopuffer_store.py
retrieval/chunkers/: __init__.py  base.py  legal_chunk_types.py  legal_ingest_chunker.py  recursive_chunker.py
retrieval/loaders/: __init__.py  ingested_corpus_loader.py
retrieval/retrievers/: __init__.py  base.py  pyserini_sparse_retriever.py  sparse_retriever.py
tests/: test_legal_hybrid_rag.py
(+979 files in other folders)
